--- a/fly.toml
+++ b/fly.toml
@@ -27,6 +27,4 @@ kill_signal = 'SIGTERM'
     soft_limit = 1000
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+    size = 'performance-1x'
